# DroneTracking

./: 20260415_135626_info.xml  CMakeLists.txt  README.md  drone_tracking_config.yaml
include/drone_tracking/gui/: MainWindow.h
include/drone_tracking/network/: WebRtcManager.h  WebSocketClient.h
src/: camera_calibration_main.cpp  drone_tracking_main.cpp  logger.cpp  logger.h  main.cpp  photo_capturer_main.cpp  rs-hello-realsense.cpp  test_realsense_main.cpp
src/camera/: RealSenseCamera.cpp  RealSenseCamera.h  RealSenseManager.cpp  RealSenseManager.h
src/common/: common.h
src/gui/: CameraWidget.cpp  CameraWidget.h  DroneTrackingWindow.cpp  DroneTrackingWindow.h  MainWindow.cpp  MainWindow.h  PhotoCaptureWindow.cpp  PhotoCaptureWindow.h
src/media/: PhotoCaptureTask.cpp  PhotoCaptureTask.h
src/network/: Signling.h  WebRtcManager.cpp  WebRtcManager.h  WebSocketClient.cpp  WebSocketSignaling.cpp  WebSocketSignaling.h
src/tracking/: TrackerConfig.cpp  TrackerConfig.h  VisionTracker.cpp  VisionTracker.h
